Fix item details popup on mobile

--- a/docs/assets/shopping_cart/styles.css
+++ b/docs/assets/shopping_cart/styles.css
@@ -515,11 +515,10 @@ select.form-select {
 }
 
 #itemDetailsModal .modal-dialog {
-    margin: 0 auto !important;
+    top: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 475px;
 }
 
 #itemDetailsModal .modal-content {
